# dcc-ai-openai-image

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
skill/openai-image-textures/: SKILL.md  runtimes.yaml  tools.yaml
skill/openai-image-textures/scripts/: _openai_images.py  edit_texture_source.py  generate_texture_source.py
tests/: test_openai_images.py
