[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dcc-ai-openai-image"
version = "0.1.0"
description = "OpenAI image generation and editing skills for DCC texture workflows"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["openai>=1.0", "dcc-mcp-core>=0.19"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

